--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,24 @@
+.form_register {
+  max-width: 1280px;
+}
+.form_register .container .card .card-header h3 {
+  font-weight: 500;
+}
+.form_register .container .card .card-body .form-input .form-control {
+  margin: 1rem 0;
+}
+.form_register .container .card .card-body .form-input .form-radio .radio {
+  margin-left: 1rem;
+}
+.form_register .container .card .card-body .form-input .form-radio .radio input {
+  width: 1.2rem;
+  height: 1.2rem;
+  vertical-align: sub;
+}
+.form_register .container .card .btn-submit button {
+  padding: 0.5rem 2.5rem;
+}
+
 * {
   margin: 0;
   padding: 0;
