--- a/assets/sass/pages/detail.scss
+++ b/assets/sass/pages/detail.scss
@@ -1,5 +1,45 @@
+.product_detail {
+    .container {
+        .detail_left {
+            width: 35%;
+        }
+
+        ;
+
+        .detail_right {
+            .quanlity {
+                .number-quantility {
+                    margin-bottom: 0;
+                    display: flex;
+                    align-items: center;
+                }
+
+                ;
+
+                .btn {
+                    i {
+                        font-size: 0.8rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+;
+
 .products {
     .container {
+        .title {
+            h3 {
+                font-size: 2rem;
+            }
+
+            ;
+        }
+
+        ;
+
         .products_show {
             max-width: 1280px;
 
@@ -28,6 +68,7 @@
                     .card_footer {
                         .button-buy {
                             border: none;
+                            border-radius: 0;
                             padding: 0.8rem 1rem;
                             background-color: #FFEB3B;
 
