--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,12 @@
   height: 1.2rem;
   vertical-align: sub;
 }
+.form_register .container .card .card-body .form-input .sp-thongbao {
+  display: block;
+  font-size: 0.8rem;
+  color: red;
+  padding-left: 0.5rem;
+}
 .form_register .container .card .btn-submit button {
   padding: 0.5rem 2.5rem;
 }
@@ -22,12 +28,12 @@
 .product_detail .container .detail_left {
   width: 35%;
 }
-.product_detail .container .detail_right .quanlity .number-quantility {
+.product_detail .container .detail_right .quantity .number-quantity {
   margin-bottom: 0;
   display: flex;
   align-items: center;
 }
-.product_detail .container .detail_right .quanlity .btn i {
+.product_detail .container .detail_right .quantity .btn i {
   font-size: 0.8rem;
 }
 
