--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -15,6 +15,12 @@
   height: 1.2rem;
   vertical-align: sub;
 }
+.form_register .container .card .card-body .form-input .sp-thongbao {
+  display: block;
+  font-size: 0.8rem;
+  color: red;
+  padding-left: 0.5rem;
+}
 .form_register .container .card .btn-submit button {
   padding: 0.5rem 2.5rem;
 }/*# sourceMappingURL=register.css.map */
