--- a/assets/sass/pages/detail.scss
+++ b/assets/sass/pages/detail.scss
@@ -7,8 +7,8 @@
         ;
 
         .detail_right {
-            .quanlity {
-                .number-quantility {
+            .quantity {
+                .number-quantity {
                     margin-bottom: 0;
                     display: flex;
                     align-items: center;
