--- a/assets/sass/pages/register.scss
+++ b/assets/sass/pages/register.scss
@@ -30,8 +30,22 @@
                             }
                         }
                     }
+
+                    ;
+
+                    .sp-thongbao {
+                        display: block;
+                        font-size: 0.8rem;
+                        color: red;
+                        padding-left: 0.5rem;
+                    }
+
+                    ;
                 }
-            };
+            }
+
+            ;
+
             .btn-submit {
                 button {
                     padding: 0.5rem 2.5rem;
