--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -32,6 +32,11 @@ a {
         a {
             color: $color-white;
         }
+        .quatity-count {
+            background-color: $color-white;
+            border-radius: 50%;
+            padding: 0 0.3rem;
+        }
     }
 }
 
