--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,6 +1,3 @@
-.product_detail .container .detail_left {
-  width: 35%;
-}
 .product_detail .container .detail_right .quantity .number-quantity {
   margin-bottom: 0;
   display: flex;
@@ -11,17 +8,13 @@
 }
 
 .products {
-  padding-top: 3rem;
+  padding-top: 1rem;
 }
 .products .container .title h3 {
   font-size: 2rem;
 }
 .products .container .products_show {
   max-width: 1280px;
-}
-.products .container .products_show .content .item {
-  width: 27%;
-  margin: 3% 3%;
 }
 .products .container .products_show .content .item .card-img-top {
   width: 85%;
@@ -39,6 +32,9 @@
   border-radius: 0;
   padding: 0.8rem 1rem;
   background-color: #FFEB3B;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .products .container .products_show .content .item .card_footer .button-buy:hover {
   background-color: #FF9800;
